--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,9 +1,15 @@
 header {
   display: flex;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid black;
+  background-color: white;
   font-family: verdana;
   font-size: 14px;
   font-weight: bold;
-  margin: auto;
 }
 
 li {
@@ -11,5 +17,24 @@ li {
 }
 
 .logo {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  padding-left: 30px;
   color: mediumaquamarine;
+}
+
+body {
+  margin: 0;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+header nav {
+  display: flex;
+  align-items: flex-end;
+  padding-right: 40px;
 }
