--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,10 @@
+body {
+  margin: 0;
+  font-family: georgia, serif;
+  font-size: 17px;
+  color: black;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -12,20 +19,21 @@ header {
   font-weight: bold;
 }
 
-li {
-  display: inline-block;
-}
-
 .logo {
   display: flex;
   align-items: center;
   flex-grow: 1;
   padding-left: 30px;
-  color: mediumaquamarine;
 }
 
-body {
-  margin: 0;
+.logo img {
+  width: 70px;
+  height: 60px;
+  margin-right: 12px;
+}
+
+.logo span {
+  color: mediumaquamarine;
 }
 
 nav span {
@@ -34,7 +42,128 @@ nav span {
 }
 
 header nav {
-  display: flex;
-  align-items: flex-end;
   padding-right: 40px;
+}
+
+.main-container {
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
+header nav {
+  padding-right: 40px;
+}
+
+.main-container {
+  display: flex;
+  width: 1232px;
+  margin: 0 auto 78px auto;
+  padding-top: 116px;
+  border: 1px solid black;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.image-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 300px;
+  margin-top: 15px;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+}
+
+.main-story .image-content {
+  background-image: url("../../resources/images/img-story-main.png");
+  width: 630px;
+  margin-top: 0;
+  text-align: left;
+  font-size: 40px;
+}
+
+.main-story .image-content span {
+  margin-left: 20px;
+}
+
+.stories {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 17px;
+}
+
+.stories .text-content {
+  height: 250px;
+}
+
+.story {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.story-text {
+  margin-top: 16px;
+}
+
+h2 {
+  margin: 0 0;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.earth.image-content {
+  background-image: url("../../resources/images/img-story-2.png")
+}
+
+.cameras.image-content {
+  background-image: url("../../resources/images/img-story-3.png");
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.cat.image-content {
+  background-image: url("../../resources/images/img-story-1.png");
+}
+
+.column.small {
+  width: 240px;
+}
+
+img.cookie {
+  height: 240px;
+}
+
+.news-bites h3 {
+  margin-bottom: 41px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.news-bites .bite {
+  display: block;
+  padding: 11px 20px;
+  border-bottom: 1px solid black;
+  background-color: whitesmoke;
+  font-family: verdana, sans-serif;
+  font-size: 12px;
+  color: dimgrey;
+}
+
+.bite span {
+  padding-left: 11px;
 }
