--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -133,6 +133,7 @@ h2 {
 
 .column.medium {
   width: 300px;
+  padding-left: 20px;
 }
 
 .cat.image-content {
@@ -141,6 +142,7 @@ h2 {
 
 .column.small {
   width: 240px;
+  padding-left: 20px;
 }
 
 img.cookie {
@@ -166,4 +168,32 @@ img.cookie {
 
 .bite span {
   padding-left: 11px;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  background-color: mediumaquamarine;
+  margin: auto;
+  font-family: "Verdana", sans-serif;
+  font-size: 12px;
+}
+
+footer .coname {
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
+  font-family: "Georgia", serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
 }
